volexc/tests/ui/parse_missing_semicolon_message.out
Error: found 'name' expected ';'
   ╭─[ parse_missing_semicolon_message.vol:4:5 ]
   │
 4 │     name: string = 2;
   │     ──┬─  
   │       ╰─── Unexpected 'name'
   │ 
   │ Note: Expected one of: ';'
───╯