volexc/tests/ui/parse_missing_semicolon_message.vol
// Missing semicolon in message field
message Request {
    id: u32 = 1
    name: string = 2;
}
